test/corpus/numbers.txt
=========
Numeric types
=========
1
-1
0xab1
-0xab1
1.0
-1.0
1b
1i
1u
1i32
1u32
0x1b
0x1i
0x1u
0x1i32
0x1u32
1.0f32
1.0f64
1f32
0x1f32
1.0i32
1.0f65
-1.0hello
1 i
---------

(program
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number)
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (int_qualifier))
    (number
        qualifier: (float_qualifier))
    (number
        qualifier: (float_qualifier))
    (number
        qualifier: (invalid_qualifier))
    (number)
    (number
        qualifier: (invalid_qualifier))
    (number) (symbol)
    (number) (symbol)
    (number) (symbol))
